# aoc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
puzzle_input/: README.md
src/2025/: CMakeLists.txt  common.cpp  common.h  main.cpp
src/2025/day_1/: day_1.cpp  day_1.h
src/2025/day_2/: day_2.cpp  day_2.h
src/2025/day_3/: day_3.cpp  day_3.h
src/2025/day_4/: day_4.cpp  day_4.h
src/2025/day_5/: day_5.cpp  day_5.h
